<resources>
    <string name="app_name">ISPBU Scoring App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game_view">Game Results</string>
    <string name="statistics_heading">Game Stats:</string>
    <string name="amb_label">Average Mark Bonus:</string>
    <string name="spares">Spares:</string>
    <string name="strikes">Strikes:</string>
    <string name="marks">Marks:</string>
    <string name="score">Score:</string>
    <string name="spf_label">Average Score/Frame:</string>
    <string name="nine_spare_label">9 Spare %:</string>
    <string name="title_activity_game_entry">Play Game</string>

    <string name="hello_world">Hello world!</string>
    <string name="undo_btn">Undo Last Throw</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="spare_symbol">/</string>
    <string name="zero">0</string>
    <string name="strike_symbol">X</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="game_played_on">Game Played At:</string>
    <string name="edit_game">Edit Game</string>
    <string name="play">Play Skittle Bowl</string>
    <string name="logo_description">ISBPU Logo</string>
    <string name="title_activity_carrer_stats">Career Stats</string>
    <string name="career_stats_button">View Career Stats</string>
    <string name="std_dev">Standard Deviation:</string>
    <string name="games">Games:</string>
    <string name="total_score">Total Score:</string>
    <string name="avg_score">Average Score:</string>
    <string name="max_score">Max Score:</string>
    <string name="min_score">Min Score:</string>
    <string name="max_marks">Max Marks:</string>
    <string name="min_marks">Min Marks:</string>
    <string name="title_game_list">Games</string>
    <string name="title_game_detail">Game Detail</string>
    <string name="show_games">View Game History</string>
    <string name="cancel_game_title">Are you sure you want to cancel?</string>
    <string name="cancel_game_message">Canceling the game will delete this score permanently.  Are you sure you want to continue?</string>
    <string name="saving_title">Saving</string>
    <string name="saving_game_message">Saving game...</string>
    <string name="ten">10</string>
    <string name="entry_mode">Entry Mode</string>
</resources>
