<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.isbpu.ispbuscoringapp.ui.activities.GameEntryActivity">

    <com.isbpu.ispbuscoringapp.ui.views.GameView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameView"
        android:paddingBottom="@dimen/bottom_game_padding"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:minHeight="@dimen/game_height" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/gameView">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/undo_btn"
            android:id="@+id/button10"
            android:layout_gravity="fill_horizontal"
            android:onClick="onUndoPress"
            android:layout_weight="1"
            android:textSize="@dimen/numpad_text_size" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/one"
                android:id="@+id/button1"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress"
                android:textSize="@dimen/numpad_text_size" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/two"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress"
                android:textSize="@dimen/numpad_text_size" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/three"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress"
                android:textSize="@dimen/numpad_text_size" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/four"
                android:id="@+id/button4"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress"
                android:textSize="@dimen/numpad_text_size" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/five"
                android:id="@+id/button5"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress"
                android:textSize="@dimen/numpad_text_size" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/six"
                android:id="@+id/button6"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress"
                android:textSize="@dimen/numpad_text_size" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/seven"
                android:id="@+id/button7"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress"
                android:textSize="@dimen/numpad_text_size" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eight"
                android:id="@+id/button8"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress"
                android:textSize="@dimen/numpad_text_size" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/nine"
                android:id="@+id/button9"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress"
                android:textSize="@dimen/numpad_text_size" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/spare_symbol"
                android:id="@+id/buttonSpare"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress"
                android:textSize="@dimen/numpad_text_size" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/zero"
                android:id="@+id/button"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress"
                android:textSize="@dimen/numpad_text_size" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/strike_symbol"
                android:id="@+id/buttonStrike"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress"
                android:textSize="@dimen/numpad_text_size" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
