<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gridLayout" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/statistics_heading"
            android:id="@+id/textView"
            android:layout_row="0"
            android:layout_column="0"
            android:textSize="25sp"
            android:layout_columnSpan="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/games"
            android:id="@+id/textView14"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            style="@style/num_col_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gamesView"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/total_score"
            android:id="@+id/textView2"
            android:layout_row="2"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scoreView"
            android:layout_row="2"
            android:layout_column="1"
            style="@style/num_col_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/avg_score"
            android:id="@+id/textView9"
            android:layout_row="3"
            android:layout_column="0" />

        <TextView
            style="@style/num_col_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/avgScoreView"
            android:layout_row="3"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/max_score"
            android:id="@+id/textView10"
            android:layout_row="4"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/marksView"
            android:layout_row="6"
            android:layout_column="1"
            style="@style/num_col_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/strikes"
            android:id="@+id/textView4"
            android:layout_row="7"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/spares"
            android:id="@+id/textView5"
            android:layout_row="8"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/strikesView"
            android:layout_row="7"
            android:layout_column="1"
            style="@style/num_col_style_small" />

        <TextView
            style="@style/num_col_style_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/maxScoreView"
            android:layout_row="4"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/min_score"
            android:id="@+id/textView11"
            android:layout_row="5"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/marks"
            android:id="@+id/textView3"
            android:layout_row="6"
            android:layout_column="0" />

        <TextView
            style="@style/num_col_style_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minScoreView"
            android:layout_row="5"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/max_marks"
            android:id="@+id/textView12"
            android:layout_row="9"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sparesView"
            android:layout_row="8"
            android:layout_column="1"
            style="@style/num_col_style_small" />

        <TextView
            style="@style/num_col_style_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/maxMarkView"
            android:layout_row="9"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/min_marks"
            android:id="@+id/textView13"
            android:layout_row="10"
            android:layout_column="0" />

        <TextView
            style="@style/num_col_style_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minMarkView"
            android:layout_row="10"
            android:layout_column="1" />

    </GridLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/stat_margin">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/amb_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/spf_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/bonusView"
            style="@style/num_col_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/nine_spare_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/spfView"
            style="@style/num_col_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/std_dev"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/nineSpareView"
            style="@style/num_col_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2" />

        <TextView
            android:id="@+id/stdDevView"
            style="@style/num_col_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3" />
    </GridLayout>

</LinearLayout>